[package]
name = "contra-ai"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
solana-program = "2.3.0"
spl-token = "7.0"
spl-associated-token-account = { version = "6.0", features = ["no-entrypoint"] }
borsh = "1.5"
borsh-derive = "1.5"
thiserror = "2.0"

[profile.release]
overflow-checks = true
lto = true
codegen-units = 1
